--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/recoil": "^0.0.9",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recoil": "^0.7.3",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.9",
+    "@types/axios": "^0.14.0",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
