--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "recoil": "^0.7.3",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
