--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.5",
     "recoil": "^0.7.3",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
