--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.3",
     "@types/recoil": "^0.0.9",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
@@ -25,7 +26,8 @@
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.5",
     "recoil": "^0.7.3",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.9",
