--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/recoil": "^0.0.9",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "clsx": "^1.1.1",
     "moment": "^2.29.3",
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
