--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "flatpickr": "^4.6.13",
     "moment": "^2.29.3",
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
