--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
-    "flatpickr": "^4.6.13",
     "moment": "^2.29.3",
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
@@ -37,6 +37,7 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
+    "@types/react-datepicker": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
@@ -62,5 +63,13 @@
     "tailwindcss": "^3.0.17",
     "typescript": "^4.5.5"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "resolutions": {
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.2"
+  },
+  "overrides": {
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.2"
+  }
 }
