--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.3",
+    "@types/react-paginate": "^7.1.1",
     "@types/recoil": "^0.0.9",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
@@ -27,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
+    "react-paginate": "^8.1.3",
     "react-toastify": "^9.0.5",
     "recoil": "^0.7.3",
     "recoil-persist": "^4.2.0",
