--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.1.1",
     "moment": "^2.29.3",
     "next": "^12.0.9",
+    "next-auth": "^4.10.3",
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.8.0",
