--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.3",
+    "@types/luxon": "^3.0.0",
     "@types/react-paginate": "^7.1.1",
     "@types/recoil": "^0.0.9",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
-    "moment": "^2.29.3",
+    "luxon": "^3.0.3",
     "next": "^12.0.9",
     "next-auth": "^4.10.3",
     "next-seo": "^4.29.0",
