--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-toastify": "^9.0.5",
     "recoil": "^0.7.3",
     "recoil-persist": "^4.2.0",
+    "socket.io-client": "^4.5.2",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "yup": "^0.32.11"
   },
