--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "cookies-next": "^2.1.1",
     "luxon": "^3.0.3",
     "next": "^12.0.9",
     "next-auth": "^4.10.3",
