--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "recoil-persist": "^4.2.0",
     "socket.io-client": "^4.5.2",
     "styled-jsx-plugin-postcss": "^4.0.1",
+    "swr": "^1.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
