--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.0.17",
     "typescript": "^4.5.5"
   },
