--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.3",
     "@types/luxon": "^3.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react-paginate": "^7.1.1",
     "@types/recoil": "^0.0.9",
     "axios": "^0.27.2",
@@ -26,6 +27,7 @@
     "next": "^12.0.9",
     "next-auth": "^4.10.3",
     "next-seo": "^4.29.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
