--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "luxon": "^3.0.3",
     "next": "^12.0.9",
     "next-auth": "^4.10.3",
+    "next-http-proxy-middleware": "^1.2.5",
     "next-seo": "^4.29.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
